src/test/resources/frontendReference/invalid/syntaxErr/function/badlyNamed.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:6 -- mismatched input '(' expecting {'[', '='}
Syntactic Error at 16:2 -- mismatched input 'int' expecting <EOF>
2 parser error(s) detected, no further compilation attempted.
